@@ -64,14 +64,14 @@ public class NoGuavaListsNewLinkedList extends Recipe {
                             .build()
                             .apply(getCursor(), method.getCoordinates().replace());
                 } else if (NEW_LINKED_LIST_ITERABLE.matches(method) && method.getArguments().size() == 1 &&
-                           TypeUtils.isAssignableTo("java.util.Collection", method.getArguments().get(0).getType())) {
+                           TypeUtils.isAssignableTo("java.util.Collection", method.getArguments().getFirst().getType())) {
                     maybeRemoveImport("com.google.common.collect.Lists");
                     maybeAddImport("java.util.LinkedList");
                     return JavaTemplate.builder("new LinkedList<>(#{any(java.util.Collection)})")
                             .contextSensitive()
                             .imports("java.util.LinkedList")
                             .build()
-                            .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().get(0));
+                            .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().getFirst());
                 }
                 return super.visitMethodInvocation(method, ctx);
             }
