@@ -65,10 +65,9 @@ public class NoGuavaOptionalFromJavaUtil extends Recipe {
         @Override
         public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
             J j = super.visitMethodInvocation(method, ctx);
-            if (j instanceof J.MethodInvocation) {
-                J.MethodInvocation mi = (J.MethodInvocation) j;
+            if (j instanceof J.MethodInvocation mi) {
                 if (METHOD_MATCHER.matches(mi)) {
-                    return mi.getArguments().get(0).withPrefix(mi.getPrefix());
+                    return mi.getArguments().getFirst().withPrefix(mi.getPrefix());
                 }
             }
             return j;
