@@ -36,7 +36,7 @@ public class AnnotateTypesVisitor extends JavaIsoVisitor<Set<String>> {
         String className = split[split.length - 1];
         String packageName = this.annotationToBeAdded.substring(0, this.annotationToBeAdded.lastIndexOf("."));
         this.annotationMatcher = new AnnotationMatcher("@" + this.annotationToBeAdded);
-        String interfaceAsString = String.format("package %s; public @interface %s {}", packageName, className);
+        String interfaceAsString = "package %s; public @interface %s {}".formatted( packageName, className );
         this.template = JavaTemplate.builder("@" + className)
                 .imports(this.annotationToBeAdded)
                 .javaParser(JavaParser.fromJavaVersion().dependsOn(interfaceAsString))
