@@ -63,7 +63,7 @@ public class StringFormatted extends Recipe {
             }
 
             List<Expression> arguments = m.getArguments();
-            boolean wrapperNotNeeded = wrapperNotNeeded(arguments.get(0));
+            boolean wrapperNotNeeded = wrapperNotNeeded(arguments.getFirst());
             maybeRemoveImport("java.lang.String.format");
             J.MethodInvocation mi = m.withName(m.getName().withSimpleName("formatted"));
             JavaType.Method formatted = m.getMethodType().getDeclaringType().getMethods().stream()
@@ -74,8 +74,8 @@ public class StringFormatted extends Recipe {
             if (mi.getName().getType() != null) {
                 mi = mi.withName(mi.getName().withType(mi.getMethodType()));
             }
-            Expression select = wrapperNotNeeded ? arguments.get(0) :
-                new J.Parentheses<>(randomId(), Space.EMPTY, Markers.EMPTY, JRightPadded.build(arguments.get(0)));
+            Expression select = wrapperNotNeeded ? arguments.getFirst() :
+                new J.Parentheses<>(randomId(), Space.EMPTY, Markers.EMPTY, JRightPadded.build(arguments.getFirst()));
             mi = mi.withSelect(select);
             mi = mi.withArguments(arguments.subList(1, arguments.size()));
             if(mi.getArguments().isEmpty()) {
