@@ -51,19 +51,19 @@ public class SimplifyMicrometerMeterTags extends Recipe {
             public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                 J.MethodInvocation m = super.visitMethodInvocation(method, ctx);
                 if (COUNTER_TAGS.matches(m)) {
-                    if (m.getArguments().get(0) instanceof J.NewArray) {
-                        J.NewArray arr = (J.NewArray) m.getArguments().get(0);
+                    if (m.getArguments().getFirst() instanceof J.NewArray) {
+                        J.NewArray arr = (J.NewArray) m.getArguments().getFirst();
                         if (arr.getInitializer() != null && arr.getInitializer().size() > 1) {
                             m = JavaTemplate.builder("#{any(String)}, #{any(String)}")
                                     .contextSensitive()
                                     .build()
-                                    .apply(updateCursor(m), m.getCoordinates().replaceArguments(), arr.getInitializer().get(0), arr.getInitializer().get(1));
+                                    .apply(updateCursor(m), m.getCoordinates().replaceArguments(), arr.getInitializer().getFirst(), arr.getInitializer().get(1));
                         }
                     } else {
                         m = JavaTemplate.builder("#{any()}[0], #{any()}[1]")
                                 .contextSensitive()
                                 .build()
-                                .apply(updateCursor(m), m.getCoordinates().replaceArguments(), m.getArguments().get(0), m.getArguments().get(0));
+                                .apply(updateCursor(m), m.getCoordinates().replaceArguments(), m.getArguments().getFirst(), m.getArguments().getFirst());
                     }
                     m = m.withName(m.getName().withSimpleName("tag"));
                 }
