@@ -54,7 +54,7 @@ public class MigrateCollectionsSingletonSet extends Recipe {
                             .contextSensitive()
                             .imports("java.util.Set")
                             .build()
-                            .apply(updateCursor(m), m.getCoordinates().replace(), m.getArguments().get(0));
+                            .apply(updateCursor(m), m.getCoordinates().replace(), m.getArguments().getFirst());
                 }
                 return m;
             }
