@@ -59,7 +59,7 @@ public class OptionalStreamRecipe extends Recipe {
         public J.MethodInvocation visitMethodInvocation(J.MethodInvocation invocation, ExecutionContext ctx) {
             J.MethodInvocation mapInvocation = super.visitMethodInvocation(invocation, ctx);
             // .map(Optional::get)
-            if (!mapMatcher.matches(mapInvocation) || !optionalGetMatcher.matches(mapInvocation.getArguments().get(0))) {
+            if (!mapMatcher.matches(mapInvocation) || !optionalGetMatcher.matches(mapInvocation.getArguments().getFirst())) {
                 return mapInvocation;
             }
             // .filter
@@ -69,7 +69,7 @@ public class OptionalStreamRecipe extends Recipe {
             }
             // Optional::isPresent
             J.MethodInvocation filterInvocation = (J.MethodInvocation) mapSelectExpr;
-            if (!optionalIsPresentMatcher.matches(filterInvocation.getArguments().get(0))) {
+            if (!optionalIsPresentMatcher.matches(filterInvocation.getArguments().getFirst())) {
                 return mapInvocation;
             }
 
